--- a/compose.yml
+++ b/compose.yml
@@ -15,6 +15,30 @@ services:
     volumes:
       - /myqpp/node_modules
       - ./front:/myqpp
+  swagger-editor:
+    image: swaggerapi/swagger-editor
+    ports:
+      - "8001:8080"
+
+  swagger-ui:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "8002:8080"
+    volumes:
+      - ./swagger/openapi.yaml:/openapi.yaml
+    environment:
+      SWAGGER_JSON: /openapi.yaml
+    depends_on:
+      - swagger-api
+    
+
+  swagger-api:
+    image: stoplight/prism:3
+    ports:
+      - "8003:4010"
+    command: mock -h 0.0.0.0 /openapi.yaml
+    volumes:
+      - ./swagger/openapi.yaml:/openapi.yaml
 
 volumes:
   rails-bundle:
