--- a/compose.yml
+++ b/compose.yml
@@ -40,6 +40,27 @@ services:
     volumes:
       - ./swagger/openapi.yaml:/openapi.yaml
 
+  db:
+    image: mysql
+    environment:
+      DB_USER: root
+      DB_PW: password
+      DB_HOST: db
+      BUNDLE_PATH: /bundle
+      TZ: "Asia/Tokyo"
+    volumes:
+      - mysql_volume:/var/lib/mysql
+    restart: always
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 10s
+      interval: 10s
+      retries: 10
+      start_period: 10s
+    ports:
+      - "3306:3306"
+
 volumes:
   rails-bundle:
     driver: local
