--- a/compose.yml
+++ b/compose.yml
@@ -2,12 +2,26 @@ version: '3.7'
 
 services:
   back:
-    build: ./back
+    build:
+      context: ./back
     ports:
       - "3000:3000"
     volumes:
       - rails-bundle:/usr/local/bundle
-      - ./back:/myqpp
+      - ./back:/myapp
+    depends_on:
+      - db
+    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    environment:
+      DB_USER: root
+      DB_PW: password
+      DB_HOST: db
+      BUNDLE_PATH: /usr/local/bundle
+      TZ: "Asia/Tokyo"
+    restart: always
+    tty: true
+    stdin_open: true
+
   front:
     build: ./front
     ports:
