--- a/back/Gemfile
+++ b/back/Gemfile
@@ -6,6 +6,7 @@ ruby "3.2.2"
 gem "rails", "~> 7.1.3", ">= 7.1.3.2"
 gem "mysql2", "~> 0.5"
 gem "puma", ">= 5.0"
+gem "bcrypt", "~> 3.1.12"
 gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
 
