--- a/back/Gemfile
+++ b/back/Gemfile
@@ -9,6 +9,7 @@ gem "puma", ">= 5.0"
 gem "bcrypt", "~> 3.1.12"
 gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
+gem 'devise'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
