--- a/back/Gemfile
+++ b/back/Gemfile
@@ -10,6 +10,9 @@ gem "bcrypt", "~> 3.1.12"
 gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
 gem 'devise'
+gem "rack-cors"
+gem 'devise_token_auth'
+gem 'devise-i18n'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
