--- a/back/Gemfile
+++ b/back/Gemfile
@@ -3,15 +3,15 @@ source "https://rubygems.org"
 ruby "3.2.2"
 
 
-gem "rails", "~> 7.1.3", ">= 7.1.3.2"
+gem "rails", "~> 7.0.6"
 gem "mysql2", "~> 0.5"
 gem "puma", ">= 5.0"
 gem "bcrypt", "~> 3.1.12"
 gem "tzinfo-data", platforms: %i[ windows jruby ]
 gem "bootsnap", require: false
-gem 'devise'
+gem 'devise', '~> 4.9', '>= 4.9.3'
 gem "rack-cors"
-gem 'devise_token_auth'
+gem 'devise_token_auth', '~> 1.2', '>= 1.2.2'
 gem 'devise-i18n'
 
 group :development, :test do
