--- a/back/Gemfile
+++ b/back/Gemfile
@@ -13,6 +13,7 @@ gem 'devise', '~> 4.9', '>= 4.9.3'
 gem "rack-cors"
 gem 'devise_token_auth', '~> 1.2', '>= 1.2.2'
 gem 'devise-i18n'
+gem 'omniauth'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
