--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "next": "14.1.3",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
