--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -3,8 +3,11 @@ FROM node:20.11.0
 RUN mkdir /myapp
 WORKDIR /myapp
 
-ADD . .
+ADD package.json /myapp/package.json
+ADD package-lock.json /myapp/package-lock.json
 
 RUN npm install
+
+ADD . /myapp
 
 CMD ["npm", "run", "dev"]
