--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.11",
+    "framer-motion": "^11.0.12",
     "next": "14.1.3",
     "next-transpile-modules": "^10.0.1",
     "react": "^18",
