--- a/back/Gemfile
+++ b/back/Gemfile
@@ -14,6 +14,7 @@ gem "rack-cors"
 gem 'devise_token_auth', '~> 1.2', '>= 1.2.2'
 gem 'devise-i18n'
 gem 'omniauth'
+gem 'httpclient'
 
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
