うまくenvが反映されない問題を修正

--- a/compose.yml
+++ b/compose.yml
@@ -28,6 +28,7 @@ services:
     volumes:
       - ./front/app:/myapp/app
       - ./front/public:/myapp/public
+      - ./front/.env.development.local:/myapp/.env.development.local
       - node_modules:/myapp/node_modules
     tty: true
     stdin_open: true
