--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,10 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "next": "14.1.3",
